Fixed right gap on mobile.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,8 +1,5 @@
-* {
+body {
   box-sizing: border-box;
-}
-
-html {
   font-size: 18px;
   font-family: helvetica;
   line-height: 1.4;
@@ -109,7 +106,6 @@ header .site_container {
 
 .title {
   background-color: cadetblue;
-  box-sizing: content-box;
   color: white;
   font-size: 1rem;
   font-weight: bold;
@@ -123,10 +119,11 @@ p {
 }
 
 footer {
+  align-self: center;
   background-color: azure;
   display: flex;
   margin-top: 5rem;
-  padding: 4rem;
+  padding: 4rem 0 4rem 4rem;
 }
 
 @media screen and (max-width: 1024px) {
@@ -152,7 +149,7 @@ footer {
 }
 
 @media screen and (max-width: 670px) {
-  
+
   header {
     background-position: 20%;
     height: 17rem;
@@ -197,6 +194,7 @@ footer {
   }
 
   .title {
+    box-sizing: border-box;
     width: 100%;
     text-align: center;
   }
@@ -208,6 +206,7 @@ footer {
   footer {
     flex-direction: column;
     align-items: center;
+    padding: 4rem 0 4rem 4rem;
   }
 
 }
